--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "data2xml": "~0.4.0",
     "xml2js": "~0.1.13"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eyes": "~0.1.7"
+  },
   "optionalDependencies": {},
   "engines": {
     "node": "*"
